--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
 
       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 
-      - run: docker tag automation eu.gcr.io/vnet-dev/docker-automation-framework
+      - run: docker tag docker-automation-framework eu.gcr.io/vnet-dev/docker-automation-framework
 
       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
