--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,9 +47,7 @@ jobs:
 
       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 
-      - run: docker tag docker-automation-framework eu.gcr.io/vnet-dev/docker-automation-framework
-
-      - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
+      - run: docker push eu.gcr.io/vnet-dev/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
       - store_artifacts:
           path: Dockerfile
