--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,8 @@ jobs:
 
       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 
+      - run: docker tag $IMAGE_NAME:$IMAGE_TAG eu.gcr.io/vnet-dev/docker-automation-framework:$IMAGE_TAG
+
       - run: docker push eu.gcr.io/vnet-dev/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
       - store_artifacts:
