--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
 
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      - run: docker build eu.gcr.io/vnet-core/circleci/docker-automation-framework .
+      - run: docker build .
 
       - run: docker tag docker-automation-framework eu.gcr.io/vnet-core/circleci/docker-automation-framework
 
