--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,13 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - run:
-          name: Auth GCP Container Registry
+          name: Provision Google Cloud project-specific account credentials
           command: |
-            echo $vnet_core_gcp_service_account | docker login --username _json_key --password-stdin https://eu.gcr.io
-
+            # Convert, compute, and dump environment variable content into file
+            # export GOOGLE_PROJECT_CONVERTED=$(echo "${GOOGLE_PROJECT_NAME}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')
+            # export GCP_PROJECT_SPECIFIC_ENVIRONMENT_VARIABLE_NAME="GOOGLE_CREDENTIALS_${GOOGLE_PROJECT_CONVERTED}"
+            printf '%s\n' "${GOOGLE_CREDENTIALS_PE_PROD}" > "${HOME}/service-account.json"
+            
       - run: docker build --tag eu.gcr.io/vnet-core/docker-automation-framework .
 
       - run: docker push eu.gcr.io/vnet-core/docker-automation-framework && sleep 10
