--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,12 +46,9 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - run:
-          name: Provision Google Cloud project-specific account credentials
+          name: Autenticate to Container Registry
           command: |
-            # Convert, compute, and dump environment variable content into file
-            export GOOGLE_PROJECT_CONVERTED=$(echo "${GOOGLE_PROJECT_NAME}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')
-            export GCP_PROJECT_SPECIFIC_ENVIRONMENT_VARIABLE_NAME="GOOGLE_CREDENTIALS_${GOOGLE_PROJECT_CONVERTED}"
-            printf '%s\n' "${GOOGLE_CREDENTIALS_PE_PROD}" > "${HOME}/service-account.json"
+            gcloud auth configure-docker
 
       - run: docker build --tag eu.gcr.io/vnet-core/circleci/docker-automation-framework .
 
