--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,11 @@ jobs:
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - run:
+        name: Make sure the latest components are install_headers
+        command: |
+          gcloud --quiet components update
+
+      - run:
           name: Autenticate to Container Registry
           command: |
             gcloud auth configure-docker
