added new options

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,98 +1,40 @@
-image_config: &image_config
-
-  # make sure to set your Docker Hub username & password in CircleCI,
-  # either as project-specific environment variables
-  # or as resources in your organization's org-global Context
-
-  IMAGE_NAME: docker-automation-framework
-
-  IMAGE_TAG: latest
-
-  # NOTE: if you're modifying this config.yml file manually
-  # rather than using the included setup script,
-  # make sure you also add the values of your IMAGE_NAME & IMAGE_TAG variables
-  # to the `test_image` job (line 55)
-
-  LINUX_VERSION: DEBIAN_STRETCH
-
-  # # RUBY_VERSION_NUM: # pick a version from https://cache.ruby-lang.org/pub/ruby
-
-  # # NODE_VERSION_NUM: # pick a version from https://nodejs.org/dist
-
-  PYTHON_VERSION_NUM: 3.7.0
-
-  JAVA: false
-
-  MYSQL_CLIENT: false
-
-  POSTGRES_CLIENT: false
-
-  DOCKERIZE: false
-
-  BROWSERS: false
-
+# Python CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-python/ for more details
+#
 version: 2
 jobs:
-  build:
-    machine: true
-    environment:
-      <<: *image_config
+  build_image:
 
     steps:
       - checkout
-
-      - run: bash scripts/generate.sh > Dockerfile
-
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
       - run:
           name: Auth GCP Container Registry
           command: |
             echo $vnet_core_gcp_service_account | docker login --username _json_key --password-stdin https://eu.gcr.io
-
-      - run: docker build --tag eu.gcr.io/vnet-core/circleci/docker-automation-framework .
-
-      - run: docker push eu.gcr.io/vnet-core/circleci/docker-automation-framework && sleep 10
-
-      - store_artifacts:
-          path: Dockerfile
-
-  test_image:
-    docker:
-      - image: $DOCKER_USERNAME/docker-automation-framework:latest
-        environment:
-          <<: *image_config
-
-    steps:
-      - checkout
-
       - run:
-          name: start Xvfb for phantomjs test
-          # command: Xvfb :99
-          # background: true
-
-      - run:
-          name: bats tests
+          name: Build image
           command: |
-            mkdir -p test_results/bats
-            bats scripts/tests.bats | \
-            perl scripts/tap-to-junit.sh > \
-            test_results/bats/results.xml
-
-      - store_test_results:
-          path: test_results
-
+            docker build --tag eu.gcr.io/vnet-core/circleci/automation_framework_image:${CIRCLE_BRANCH//\//_} \
+              --label org.label-schema.vcs-ref=$CIRCLE_SHA1 \
+              --label org.label-schema.vcs-url=$CIRCLE_REPOSITORY_URL \
+              --label org.label-schema.schema-version="1.0" \
+              .
+      - run:
+          name: Push image to registry
+          command: |
+            docker push eu.gcr.io/vnet-core/circleci/automation_framework_image:${CIRCLE_BRANCH//\//_}
+      - persist_to_workspace:
+          root: /
+          paths:
+            - pushed_images.txt
       - store_artifacts:
-          path: test_results
+          path: /pushed_images.txt
 
-# workflows:
-#   version: 2
-#   dockerfile_wizard:
-#     jobs:
-#       - build:
-#           context: org-global
-#
-#       - test_image:
-#           context: org-global
-#           requires:
-#             - build
+workflows:
+  version: 2
+  automation_framework:
+    jobs:
+      - build_image:
+          context: vnet
