--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,15 @@ version: 2
 jobs:
   build_image:
     docker:
-      - image: eu.gcr.io/vnet-core/circleci/python-base:latest
+      - image: docker:17.11.0-ce
     steps:
+      - checkout
+      - setup_remote_docker:
+          version: 17.11.0-ce
       - run:
           name: Auth GCP Container Registry
           command: |
             echo $vnet_core_gcp_service_account | docker login --username _json_key --password-stdin https://eu.gcr.io
-
-      - checkout
-
       - run:
           name: Build image
           command: |
